src/main/grammar/JSONSchema/draft04Parser.py
# Generated from draft04.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class draft04Parser ( Parser ):

    grammarFileName = "draft04.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\"$ref\"'", "'\"default\"'", "'\"definitions\"'", 
                     "'\"description\"'", "'\"title\"'", "'\"id\"'", "'\"$id\"'", 
                     "'\"$schema\"'", "'\"additionalItems\"'", "'\"additionalProperties\"'", 
                     "'\"allOf\"'", "'\"anyOf\"'", "'\"enum\"'", "'\"items\"'", 
                     "'\"minItems\"'", "'\"not\"'", "'\"oneOf\"'", "'\"properties\"'", 
                     "'\"required\"'", "'\"type\"'", "'\"multipleOf\"'", 
                     "'\"maximum\"'", "'\"exclusiveMaximum\"'", "'\"minimum\"'", 
                     "'\"exclusiveMinimum\"'", "'\"maxLength\"'", "'\"minLength\"'", 
                     "'\"pattern\"'", "'\"maxItems\"'", "'\"uniqueItems\"'", 
                     "'\"maxProperties\"'", "'\"minProperties\"'", "'\"patternProperties\"'", 
                     "'\"dependencies\"'", "'\"format\"'", "'\"array\"'", 
                     "'\"object\"'", "'\"string\"'", "'\"number\"'", "'\"integer\"'", 
                     "'\"boolean\"'", "'\"null\"'", "'\"extends\"'", "'\"implements\"'", 
                     "'null'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"'", "'['", "']'", "'{'", 
                     "'}'", "','", "':'", "'.'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "DollarRefPropertyName", "DefaultPropertyName", 
                      "DefinitionsPropertyName", "DescriptionPropertyName", 
                      "TitlePropertyName", "IdPropertyName", "DollarIdPropertyName", 
                      "DollarSchemaPropertyName", "AdditionalItemsPropertyName", 
                      "AdditionalPropertiesPropertyName", "AllOfPropertyName", 
                      "AnyOfPropertyName", "EnumPropertyName", "ItemsPropertyName", 
                      "MinItemsPropertyName", "NotPropertyName", "OneOfPropertyName", 
                      "PropertiesPropertyName", "RequiredPropertyName", 
                      "TypePropertyName", "MultipleOfPropertyName", "MaximumPropertyName", 
                      "ExclusiveMaximumPropertyName", "MinimumPropertyName", 
                      "ExclusiveMinimumPropertyName", "MaxLengthPropertyName", 
                      "MinLengthPropertyName", "PatternPropertyName", "MaxItemsPropertyName", 
                      "UniqueItemsPropertyName", "MaxPropertiesPropertyName", 
                      "MinPropertiesPropertyName", "PatternPropertiesPropertyName", 
                      "DependenciesPropertyName", "FormatPropertyName", 
                      "ArrayTypeName", "ObjectTypeName", "StringTypeName", 
                      "NumberTypeName", "IntegerTypeName", "BooleanTypeName", 
                      "NullTypeName", "ExtendsPropertyName", "ImplementsPropertyName", 
                      "NullValue", "TrueValue", "FalseValue", "UnsignedInteger", 
                      "Fraction", "Exponent", "String", "DoubleQuote", "OpenArray", 
                      "CloseArray", "OpenObject", "CloseObject", "ContainerItemSeparator", 
                      "KeyValueSeparator", "DecimalSeparator", "PlusSign", 
                      "MinusSign", "WhiteSpace", "EscapedChar", "NonEscapedChar", 
                      "DecimalDigit", "HexadecimalDigit" ]

    RULE_json = 0
    RULE_value = 1
    RULE_primitiveValue = 2
    RULE_nullValue = 3
    RULE_booleanValue = 4
    RULE_numberValue = 5
    RULE_integer = 6
    RULE_stringValue = 7
    RULE_containerValue = 8
    RULE_arrayValue = 9
    RULE_schemaObjectArray = 10
    RULE_typeNameArray = 11
    RULE_objectValue = 12
    RULE_member = 13
    RULE_schemaObjectValue = 14
    RULE_jsonReferenceSchemaObjectValue = 15
    RULE_dollarReferenceProperty = 16
    RULE_literalSchemaObjectValue = 17
    RULE_jsonSchemaProperty = 18
    RULE_extendedSchemaObjectValue = 19
    RULE_proprietaryProperty = 20
    RULE_annotation = 21
    RULE_defaultProperty = 22
    RULE_definitionsProperty = 23
    RULE_descriptionProperty = 24
    RULE_titleProperty = 25
    RULE_idProperty = 26
    RULE_dollarIdProperty = 27
    RULE_dollarSchemaProperty = 28
    RULE_restriction = 29
    RULE_additionalItemsProperty = 30
    RULE_additionalPropertiesProperty = 31
    RULE_allOfProperty = 32
    RULE_anyOfProperty = 33
    RULE_enumProperty = 34
    RULE_itemsProperty = 35
    RULE_minItemsProperty = 36
    RULE_notProperty = 37
    RULE_oneOfProperty = 38
    RULE_propertiesProperty = 39
    RULE_requiredProperty = 40
    RULE_typeProperty = 41
    RULE_multipleOfProperty = 42
    RULE_maximumProperty = 43
    RULE_exclusiveMaximumProperty = 44
    RULE_minimumProperty = 45
    RULE_exclusiveMinimumProperty = 46
    RULE_maxLengthProperty = 47
    RULE_minLengthProperty = 48
    RULE_patternProperty = 49
    RULE_maxItemsProperty = 50
    RULE_uniqueItemsProperty = 51
    RULE_maxPropertiesProperty = 52
    RULE_minPropertiesProperty = 53
    RULE_patternPropertiesProperty = 54
    RULE_dependenciesProperty = 55
    RULE_formatProperty = 56
    RULE_extension = 57
    RULE_extendsProperty = 58
    RULE_implementsProperty = 59
    RULE_name = 60
    RULE_propertyName = 61
    RULE_typeName = 62
    RULE_extensionKeyword = 63

    ruleNames =  [ "json", "value", "primitiveValue", "nullValue", "booleanValue", 
                   "numberValue", "integer", "stringValue", "containerValue", 
                   "arrayValue", "schemaObjectArray", "typeNameArray", "objectValue", 
                   "member", "schemaObjectValue", "jsonReferenceSchemaObjectValue", 
                   "dollarReferenceProperty", "literalSchemaObjectValue", 
                   "jsonSchemaProperty", "extendedSchemaObjectValue", "proprietaryProperty", 
                   "annotation", "defaultProperty", "definitionsProperty", 
                   "descriptionProperty", "titleProperty", "idProperty", 
                   "dollarIdProperty", "dollarSchemaProperty", "restriction", 
                   "additionalItemsProperty", "additionalPropertiesProperty", 
                   "allOfProperty", "anyOfProperty", "enumProperty", "itemsProperty", 
                   "minItemsProperty", "notProperty", "oneOfProperty", "propertiesProperty", 
                   "requiredProperty", "typeProperty", "multipleOfProperty", 
                   "maximumProperty", "exclusiveMaximumProperty", "minimumProperty", 
                   "exclusiveMinimumProperty", "maxLengthProperty", "minLengthProperty", 
                   "patternProperty", "maxItemsProperty", "uniqueItemsProperty", 
                   "maxPropertiesProperty", "minPropertiesProperty", "patternPropertiesProperty", 
                   "dependenciesProperty", "formatProperty", "extension", 
                   "extendsProperty", "implementsProperty", "name", "propertyName", 
                   "typeName", "extensionKeyword" ]

    EOF = Token.EOF
    DollarRefPropertyName=1
    DefaultPropertyName=2
    DefinitionsPropertyName=3
    DescriptionPropertyName=4
    TitlePropertyName=5
    IdPropertyName=6
    DollarIdPropertyName=7
    DollarSchemaPropertyName=8
    AdditionalItemsPropertyName=9
    AdditionalPropertiesPropertyName=10
    AllOfPropertyName=11
    AnyOfPropertyName=12
    EnumPropertyName=13
    ItemsPropertyName=14
    MinItemsPropertyName=15
    NotPropertyName=16
    OneOfPropertyName=17
    PropertiesPropertyName=18
    RequiredPropertyName=19
    TypePropertyName=20
    MultipleOfPropertyName=21
    MaximumPropertyName=22
    ExclusiveMaximumPropertyName=23
    MinimumPropertyName=24
    ExclusiveMinimumPropertyName=25
    MaxLengthPropertyName=26
    MinLengthPropertyName=27
    PatternPropertyName=28
    MaxItemsPropertyName=29
    UniqueItemsPropertyName=30
    MaxPropertiesPropertyName=31
    MinPropertiesPropertyName=32
    PatternPropertiesPropertyName=33
    DependenciesPropertyName=34
    FormatPropertyName=35
    ArrayTypeName=36
    ObjectTypeName=37
    StringTypeName=38
    NumberTypeName=39
    IntegerTypeName=40
    BooleanTypeName=41
    NullTypeName=42
    ExtendsPropertyName=43
    ImplementsPropertyName=44
    NullValue=45
    TrueValue=46
    FalseValue=47
    UnsignedInteger=48
    Fraction=49
    Exponent=50
    String=51
    DoubleQuote=52
    OpenArray=53
    CloseArray=54
    OpenObject=55
    CloseObject=56
    ContainerItemSeparator=57
    KeyValueSeparator=58
    DecimalSeparator=59
    PlusSign=60
    MinusSign=61
    WhiteSpace=62
    EscapedChar=63
    NonEscapedChar=64
    DecimalDigit=65
    HexadecimalDigit=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class JsonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(draft04Parser.ValueContext,0)


        def EOF(self):
            return self.getToken(draft04Parser.EOF, 0)

        def WhiteSpace(self, i:int=None):
            if i is None:
                return self.getTokens(draft04Parser.WhiteSpace)
            else:
                return self.getToken(draft04Parser.WhiteSpace, i)

        def getRuleIndex(self):
            return draft04Parser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson" ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson" ):
                listener.exitJson(self)




    def json(self):

        localctx = draft04Parser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==62:
                self.state = 128
                self.match(draft04Parser.WhiteSpace)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.value()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==62:
                self.state = 135
                self.match(draft04Parser.WhiteSpace)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(draft04Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveValue(self):
            return self.getTypedRuleContext(draft04Parser.PrimitiveValueContext,0)


        def containerValue(self):
            return self.getTypedRuleContext(draft04Parser.ContainerValueContext,0)


        def getRuleIndex(self):
            return draft04Parser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = draft04Parser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_value)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 51, 61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.primitiveValue()
                pass
            elif token in [53, 55]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.containerValue()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nullValue(self):
            return self.getTypedRuleContext(draft04Parser.NullValueContext,0)


        def booleanValue(self):
            return self.getTypedRuleContext(draft04Parser.BooleanValueContext,0)


        def numberValue(self):
            return self.getTypedRuleContext(draft04Parser.NumberValueContext,0)


        def stringValue(self):
            return self.getTypedRuleContext(draft04Parser.StringValueContext,0)


        def getRuleIndex(self):
            return draft04Parser.RULE_primitiveValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveValue" ):
                listener.enterPrimitiveValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveValue" ):
                listener.exitPrimitiveValue(self)




    def primitiveValue(self):

        localctx = draft04Parser.PrimitiveValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_primitiveValue)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [45]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.nullValue()
                pass
            elif token in [46, 47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.booleanValue()
                pass
            elif token in [48, 61]:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.numberValue()
                pass
            elif token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 51]:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.stringValue()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NullValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NullValue(self):
            return self.getToken(draft04Parser.NullValue, 0)

        def getRuleIndex(self):
            return draft04Parser.RULE_nullValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullValue" ):
                listener.enterNullValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullValue" ):
                listener.exitNullValue(self)




    def nullValue(self):

        localctx = draft04Parser.NullValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nullValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(draft04Parser.NullValue)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TrueValue(self):
            return self.getToken(draft04Parser.TrueValue, 0)

        def FalseValue(self):
            return self.getToken(draft04Parser.FalseValue, 0)

        def getRuleIndex(self):
            return draft04Parser.RULE_booleanValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanValue" ):
                listener.enterBooleanValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanValue" ):
                listener.exitBooleanValue(self)




    def booleanValue(self):

        localctx = draft04Parser.BooleanValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_booleanValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not(_la==46 or _la==47):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer(self):
            return self.getTypedRuleContext(draft04Parser.IntegerContext,0)


        def Fraction(self):
            return self.getToken(draft04Parser.Fraction, 0)

        def Exponent(self):
            return self.getToken(draft04Parser.Exponent, 0)

        def getRuleIndex(self):
            return draft04Parser.RULE_numberValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberValue" ):
                listener.enterNumberValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberValue" ):
                listener.exitNumberValue(self)




    def numberValue(self):

        localctx = draft04Parser.NumberValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_numberValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.integer()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==49:
                self.state = 158
                self.match(draft04Parser.Fraction)


            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==50:
                self.state = 161
                self.match(draft04Parser.Exponent)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UnsignedInteger(self):
            return self.getToken(draft04Parser.UnsignedInteger, 0)

        def MinusSign(self):
            return self.getToken(draft04Parser.MinusSign, 0)

        def getRuleIndex(self):
            return draft04Parser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)




    def integer(self):

        localctx = draft04Parser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61:
                self.state = 164
                self.match(draft04Parser.MinusSign)

